@@ -97,6 +97,8 @@ WHAT IS NEW?
       "set npc obstructs", "get npc obstructs", "set npc usable",
       "get npc usable", "set npc moves", "get npc moves" [Ralph]
     * "init mouse" no longer locks the mouse to the window
+    * "read zone", "write zone", "zone at spot",
+      "zone number of tiles" [Ralph]
 
   * Vikings of Midgard
 
